// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart areaFill snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fBPqci"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Line fill=false
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Line fill=origin
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Line fill=start
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Line fill=end
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart areaStacked snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart lineStyle snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart linearScaleStepSize snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart linearScaleSuggestedMinMax snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart logarithmicScale snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart main snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart mixedScatterLine snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart multiAxis snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart pointSizes snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart pointStyle snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fBPqci"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "circle"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "triangle"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "rect"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "rectRounded"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "rectRot"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "cross"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "crossRot"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "star"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "line"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "dash"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart steppedAfter snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart steppedBefore snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart steppedTrue snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart timeScale snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart timeSeries snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart title snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;
